--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,62 @@
-$black: rgb(0, 0, 0);
-$white: rgb(255, 255, 255);
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-body {
-  background-color: $black;
-  color: $white;
+.background {
+  background-image: url("./images/background.jpg");
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+}
+
+.title {
+  position: absolute;
+  top: 10%;
+  left: 45%;
+  color: white;
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  z-index: 1;
+  width: 10vw;
+  height: 4vh;
+  border-radius: 0.75rem;
+  border: none;
+  background-color: #f5f5f5;
+  color: black;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+  }
+  &:active {
+    transform: scale(1);
+  }
+}
+
+.contact-button {
+  position: absolute;
+  top: 25%;
+  left: 23%;
+}
+
+.menu-button {
+  position: absolute;
+  top: 25%;
+  left: 48%;
+}
+
+.about-button {
+  position: absolute;
+  top: 25%;
+  left: 73%;
 }
